--- a/resume/resume.html
+++ b/resume/resume.html
@@ -53,9 +53,12 @@
         <b>2. Python with Generative AI/ML at Technologics May 2024 – June 2024</b>
         <pre>        Built and deployed ML models using Python, NumPy, TensorFlow, and OpenCV. Gained practical experience in computer vision and scalable AI systems</pre>
 
-        <b>Full Stack Web Development at Thaniya Technologies Oct 2023 – Nov 2023</b>        
+        <b>3. Full Stack Web Development at Thaniya Technologies Oct 2023 – Nov 2023</b>        
         <pre>        Developed responsive web apps using React.js, Bootstrap, MongoDB, and Mongoose
         Collaborated in an agile team to deliver scalable features and improve user experience
+        
 </pre>
+<hr>
+<i>I hereby declare that all the information provided in the portfolio is true to the best of my knowledge and belief.</i>
 </body>
 </html>
